# repoworktree

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.specs/: bugs.md  design.md  requirements.md  sparse-checkout-migration.md  tasks.md
repoworktree/: __init__.py  __main__.py  export.py  layout.py  metadata.py  promote.py  scanner.py  sync.py  worktree.py
tests/: conftest.py  helpers.py  test_export.py  test_forall.py  test_integration.py  test_layout.py  test_metadata.py  test_promote.py  test_scanner.py  test_smoke.py  test_sparse_checkout.py  test_sync.py  test_worktree.py
