[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repoworktree"
dynamic = ["version"]
description = "Isolated workspaces for repo-managed multi-repository projects using git worktree + symlink"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Vela Team"},
]
keywords = ["git", "worktree", "repo", "workspace", "multi-repo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-timeout>=2.0"]

[project.scripts]
rwt = "repoworktree.__main__:main"

[project.urls]
Homepage = "https://github.com/anthropics/repoworktree"
Repository = "https://github.com/anthropics/repoworktree"

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
include = ["repoworktree*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
